// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section Component > render component correctly 1`] = `
<div>
  <section
    class="test__section section"
  >
    <div
      class="test__container container container--sm"
    >
      1
    </div>
  </section>
</div>
`;

exports[`Section Component > render component correctly 2`] = `
<div>
  <section
    class="test__section section"
  >
    <div
      class="test__container container container--md"
    >
      1
    </div>
  </section>
</div>
`;

exports[`Section Component > render component correctly 3`] = `
<div>
  <section
    class="test__section section"
  >
    <div
      class="test__container container container--lg"
    >
      1
    </div>
  </section>
</div>
`;
